<resources>
    <string name="app_name">Disaster Aid Provision Platform</string>
    <string name="emergency">Emergency</string>
    <string name="need">Need</string>
    <string name="resource">Resource</string>
    <string name="event">Event</string>
    <string name="action">Action</string>
    <string name="nav_home">Home</string>
    <string name="nav_map">Map</string>
    <string name="nav_profile">Profile</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="tab_emergency">Emergencies</string>
    <string name="tab_need">Needs</string>
    <string name="tab_resource">Resources</string>
    <string name="tab_event">Events</string>
    <string name="tab_action">Actions</string>
    <string name="search_hint">Search...</string>
    <string name="sort_filter">Sort\nFilter</string>
    <string name="add_emergency">Add Emergency</string>
    <string name="add_need">Add Need</string>
    <string name="add_resource">Add Resource</string>
    <string name="add_event">Add Event</string>
    <string name="add_action">Add Action</string>
    <string name="no_emergency">There is no emergency</string>
    <string name="act_type">Type:</string>
    <string name="act_subtype">Sub Type:</string>
    <string name="act_created_by">Created By:</string>
    <string name="act_user_role">User Role:</string>
    <string name="act_view_profile">View User Profile</string>
    <string name="act_creation_date">Creation Date:</string>
    <string name="act_creation_time">Creation Time:</string>
    <string name="act_last_updated_date">Last Updated Date:</string>
    <string name="act_last_updated_time">Last Updated:</string>
    <string name="act_description">Description:</string>
    <string name="act_quantity">Quantity:</string>
    <string name="act_initial_quantity">Initial Quantity:</string>
    <string name="act_initial_quantity_text">initial</string>
    <string name="act_current_quantity">Current Quantity:</string>
    <string name="act_current_quantity_text">current</string>
    <string name="act_unsupplied_quantity">Unsupplied Quantity:</string>
    <string name="act_unsupplied_quantity_text">unsupplied</string>
    <string name="act_urgency">Urgency:</string>
    <string name="act_address">Address:</string>
    <string name="act_details">Details:</string>
    <string name="act_short_note">Short Description:</string>
    <string name="act_phone_number">Phone Number:</string>
    <string name="act_edit">Edit</string>
    <string name="act_delete">Delete</string>
    <string name="act_navigate">Navigate</string>
    <string name="act_show_on_map">Show On Map</string>
    <string name="act_reliability">Give Feedback About Reliability:</string>
    <string name="act_upvote">Reliable</string>
    <string name="act_downvote">Not Reliable</string>
    <string name="act_contact_name">Contact Name:</string>
    <string name="act_contact_phone">Contact Phone:</string>
    <string name="sf_title">Sort &amp; Filter</string>
    <string name="sf_sort_by">Sort By:</string>
    <string name="sf_sort_order">Sort Order:</string>
    <string name="sf_type_filter">Filter By Type</string>
    <string name="sf_types">Select a Type:</string>
    <string name="sf_subtypes">Select Sub-Types (Optional):</string>
    <string name="sf_location_filter">Filter By Location</string>
    <string name="sf_location_select">Select From Map</string>
    <string name="sf_location_selected">Location Selected</string>
    <string name="sf_cancel">Cancel</string>
    <string name="sf_apply">Apply</string>
    <string name="sf_creation">Creation Time</string>
    <string name="sf_last_update">Last Update Time</string>
    <string name="sf_reliability">Reliability</string>
    <string name="sf_urgency">Urgency</string>
    <string name="sf_ascending">asc</string>
    <string name="sf_descending">desc</string>
    <string name="sf_distance">Distance:\n(0–20 km)</string>
    <string name="sf_from_location">From\nLocation:</string>
    <string name="sf_upvote">upvote</string>
    <string name="activity_page">Activity Page</string>
    <string name="emergency_page">Emergency Page</string>
    <string name="need_page">Need Page</string>
    <string name="resource_page">Resource Page</string>
    <string name="event_page">Event Page</string>
    <string name="action_page">Action Page</string>
    <string name="add_emergency_page">Add Emergency Page</string>
    <string name="add_need_page">Add Need Page</string>
    <string name="add_resource_page">Add Resource Page</string>
    <string name="add_event_page">Add Event Page</string>
    <string name="add_action_page">Add Action Page</string>
    <string name="login_page">Login Page</string>
    <string name="main_page">Main Page</string>
    <string name="profile_page">Profile Page</string>
    <string name="registration_page">Registration Page</string>
    <string name="forgot_password_page">Forgot Password Page</string>
    <string name="change_password_page">Change Password Page</string>
    <string name="adding_notification_page">Adding Notification Page</string>
    <string name="past_user_actions_page">Past User Actions Page</string>
    <string name="subscribe_notification_page">Subscribe Notification Page</string>
    <string name="field_need_type">Need Type (Select or Enter)</string>
    <string name="field_resource_type">Resource Type (Select or Enter)</string>
    <string name="field_action_type">Action Type (Select or Enter)</string>
    <string name="field_event_type">Event Type (Select or Enter)</string>
    <string name="field_sub_type">Sub-Type (Select or Enter)</string>
    <string name="field_location">Location (Select from Map or Enter)</string>
    <string name="field_quantity">Quantity</string>
    <string name="field_coordinate_x">X Coordinate</string>
    <string name="field_coordinate_y">Y Coordinate</string>
    <string name="field_description">Description</string>
    <string name="field_contact_name">Contact Name</string>
    <string name="field_contact_phone">Contact Phone Number</string>
    <string name="submit">Submit</string>
    <string name="required_fields">* Required Fields</string>
    <string name="edit_need">Edit Need</string>
    <string name="edit_resource">Edit Resource</string>
    <string name="edit_action">Edit Action</string>
    <string name="save_changes">Save Changes</string>
    <string name="debris_button">There Is Someone Under Debris</string>
    <string name="news_button">Notice - Information</string>
    <string name="fire_button">Response to Fire Required</string>
    <string name="medical_button">Medical Team Needed</string>
    <string name="select_1_5">Urgency: Low-Priority(1) to Critical(5) </string>
    <string name="want_recurrence">Recurrence</string>
    <string name="start_date">Start Date</string>
    <string-array name="recurrence_unit">
        <item name="day">day</item>
        <item name="week">week</item>
        <item name="month">month</item>
    </string-array>
    <string name="end_date">End Date</string>
    <string name="select_unit">Select Recurrence Unit</string>
    <string name="duration">Duration</string>
    <string name="select_recurrence_rate">Select Recurrence Rate (in selected Unit)</string>
    <string name="open_address">Open Address</string>
    <string name="sign_up">SIGN UP</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up_camel">Sign Up</string>
    <string name="sign_in_camel">Sign In</string>
    <string name="username">Username</string>
    <string name="e_mail">E-mail</string>
    <string name="username_or_email">Username or E-mail</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="change_password">Change Password</string>
    <string name="verify">VERIFY</string>
    <string name="verification_code">Verification Code</string>
    <string name="enter_verification_code">Enter Verification Code</string>
    <string name="send_verification_code">SEND VERIFICATION CODE</string>
    <string name="resend_code">RESEND CODE</string>
    <string name="email_verification_title">E-mail Verification</string>
    <string name="email_verification_description">To verify your e-mail address, enter the verification code sent to you by e-mail.</string>
    <string name="full_name">Full Name</string>
    <string name="delete_account">Delete Account</string>
    <string name="more">More</string>
    <string name="pr_login_required">You need to log in and verify your email</string>
    <string name="pr_full_name">Full Name</string>
    <string name="pr_username">Username</string>
    <string name="pr_call">Call</string>
    <string name="pr_logout">Log Out</string>
    <string name="pr_social_media">Social Media</string>
    <string name="pr_skills">Skills</string>
    <string name="pr_languages">Languages</string>
    <string name="pr_professions">Professions</string>
    <string name="pr_edit_name">Name</string>
    <string name="pr_edit_surname">Surname</string>
    <string name="pr_edit_username">Username</string>
    <string name="pr_edit_visibility">Profile Info Visible</string>
    <string name="pr_edit_proficiency">Proficiency</string>
    <string name="pr_edit_credibility_region">Credibility Region</string>
    <string name="pr_edit_verified_by">Verified By</string>
    <string name="pr_edit_phone">Phone Number</string>
    <string name="pr_edit_email">E-mail</string>
    <string name="pr_edit_nationality">Nationality</string>
    <string name="pr_edit_id">ID Number</string>
    <string name="pr_edit_address">Address</string>
    <string name="pr_edit_education">Education</string>
    <string name="pr_edit_health">Health Condition</string>
    <string name="pr_edit_blood">Blood Type</string>
    <string name="pr_hidden_profile">Hidden Profile</string>
    <string name="pr_no_connection">No Connection</string>
    <string name="dot_representation">%1$s: %2$s</string>
    <string name="verified_by">Verified By %1$s</string>
    <string name="profficient_user_in">Profficient User in %1$s</string>
    <string name="credible_user">Credible User</string>
    <string name="concat">%1$s %2$s</string>
    <string name="admin">Admin</string>
    <string name="birthday">Birthday</string>
    <string name="level">Level</string>
    <string name="apply">Apply</string>
    <string name="platform_name">Platform Name</string>
    <string name="profile_url">Profile URL</string>
    <string name="definition">Definition</string>
    <string name="select_a_file">Select a file</string>
    <string name="language">Language</string>
    <string name="profession">Profession</string>
    <string name="network_error">Network error: %1$s</string>
    <string name="profile_picture_could_not_be_updated">Profile picture could not be updated</string>
    <string name="file_could_not_be_uploaded">File could not be uploaded: %1$s</string>
    <string name="profile_successfully_updated">Profile successfully updated</string>
    <string name="warning">Warning</string>
    <string name="delete_warning_message">Are you sure you want to delete your account?</string>
    <string name="yes">Yes</string>
    <string name="account_successfully_deleted">Account successfully deleted</string>
    <string name="no">No</string>
    <string name="file_could_not_be_selected">File could not be selected</string>
    <string name="placeholder_general">Sample Text</string>
    <string name="placeholder_activity">Need</string>
    <string name="placeholder_type">Food</string>
    <string name="phone_number">Phone Number</string>
</resources>