<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/enter_ver_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:gravity="center_vertical"
            android:text="@string/email_verification_title"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_verification_description" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layVerificationCode"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_verification_code"
            app:endIconMode="clear_text"
            app:layout_constraintTop_toBottomOf="@+id/enter_ver_code"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etVerificationCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btVerifyCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="60dip"
            android:text="@string/verify"
            app:layout_constraintBottom_toTopOf="@+id/resend"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btResendCode"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="60dip"
            android:text="@string/resend_code"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </LinearLayout>

</ScrollView>