<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.authentication.ChangePasswordFragment"
    android:padding="20dp">

    <TextView
        android:id="@+id/enter_ver_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center_vertical"
        android:text="@string/enter_verification_code"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"/>
      <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layVerificationCode"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/verification_code"
        app:endIconMode="clear_text"
        app:layout_constraintTop_toBottomOf="@+id/enter_ver_code"
        android:layout_marginTop="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/verification_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/verify_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:height="60dip"
        android:text="@string/verify"
        app:layout_constraintBottom_toTopOf="@+id/resend"
        android:layout_marginBottom="10dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/resend"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:height="60dip"
        android:text="@string/resend_code"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>