<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/layAddEmergency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@drawable/empty_divider_h"
        android:orientation="vertical"
        android:padding="20dp"
        android:showDividers="middle">

        <TextView
            android:id="@+id/tvAddEmergency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:gravity="center_vertical"
            android:text="@string/add_emergency"
            android:textSize="40sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/layFirst"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@drawable/empty_divider_h"
            android:orientation="vertical"
            android:showDividers="middle">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@drawable/empty_divider_v"
                android:orientation="horizontal"
                android:showDividers="middle"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnDebris"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:checkable="true"
                    android:padding="10dp"
                    android:text="@string/debris_button"
                    android:textAllCaps="false"
                    app:icon="@drawable/ic_hand"
                    app:iconGravity="start"
                    app:iconSize="40dp"
                    app:toggleCheckedStateOnClick="true"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnNews"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:padding="10dp"
                    android:text="@string/news_button"
                    android:textAllCaps="false"
                    android:checkable="true"
                    app:icon="@drawable/ic_news"
                    app:iconGravity="start"
                    app:iconSize="45dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="-12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@drawable/empty_divider_v"
                android:orientation="horizontal"
                android:showDividers="middle"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnFire"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:padding="10dp"
                    android:text="@string/fire_button"
                    android:textAllCaps="false"
                    android:checkable="true"
                    app:icon="@drawable/ic_fire"
                    app:iconGravity="start"
                    app:iconSize="50dp"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnHealth"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:checkable="true"
                    android:padding="10dp"
                    android:text="@string/medical_button"
                    android:textAllCaps="false"
                    app:icon="@drawable/ic_hearth"
                    app:iconGravity="start"
                    app:iconSize="40dp" />

            </LinearLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etFullname"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/field_contact_name"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etPhoneNumber"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/field_contact_phone"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etCoordinate"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/field_location"
                app:startIconDrawable="@android:drawable/ic_dialog_map"
                app:endIconTint="@color/primary"
                app:endIconMode="custom">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etDescription"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/field_description"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"/>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textEnd"
            android:text="@string/required_fields" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="60dip"
            android:text="@string/submit" />

    </LinearLayout>

</ScrollView>